--- a/app/templates/administrateur/AccueilAdmin.html
+++ b/app/templates/administrateur/AccueilAdmin.html
@@ -84,66 +84,78 @@
     </div>
   </div>
 
-  <!-- Content Row -->
-
   <div class="row">
 
-    <!-- Area Chart -->
-    <div class="col-xl-8 col-lg-7">
+    <div class="col-lg-6">
+
+      <!-- Dropdown Card Example -->
       <div class="card shadow mb-4">
         <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-          <h6 class="m-0 font-weight-bold text-primary">Liste des formations</h6>
-          <div class="dropdown no-arrow">
-            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-              <div class="dropdown-header">Dropdown Header:</div>
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
+          <h6 class="m-0 font-weight-bold text-primary">GESTION DES FORMATIONS</h6>
         </div>
         <!-- Card Body -->
         <div class="card-body">
-          <div class="chart-area">
-            <canvas id="myAreaChart"></canvas>
-          </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Label Formation</th>
+                  <th scope="col">Description</th>
+                  <th scope="col">Departement</th>
+                </tr>
+              </thead>
+              <tbody>
+              {% for formation in formations %}
+                <tr>
+                  <td><a href="{{ url_for('formations.accueilFormation', id=formation.id) }}"/>
+                            {{ formation.label_formation }}</a></td>
+                  <td>{{formation.description}}</td>
+                  <td>{{formation.departement}}</td>
+                </tr>
+               {% endfor %}
+              </tbody>
+            </table>
+            <a href="{{ url_for('formations.list_formations')}}">
+              <center><button type="button" class="btn btn-info btn-sm">PLUS</button></center>
+            </a>
         </div>
       </div>
     </div>
 
-    <!-- Pie Chart -->
-    <div class="col-xl-4 col-lg-5">
+    <div class="col-lg-6">
+
+      <!-- Dropdown Card Example -->
       <div class="card shadow mb-4">
         <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-          <h6 class="m-0 font-weight-bold text-primary">Liste des professeurs</h6>
-          <div class="dropdown no-arrow">
-            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-              <div class="dropdown-header">Dropdown Header:</div>
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
+          <h6 class="m-0 font-weight-bold text-primary">GESTION DES PROFESSEURS</h6>
         </div>
         <!-- Card Body -->
         <div class="card-body">
-          <div class="chart-pie pt-4 pb-2">
-            <canvas id="myPieChart"></canvas>
-          </div>
-          <div class="mt-4 text-center small">
-          </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Nom</th>
+                  <th scope="col">Prénom</th>
+                   <th scope="col">email</th>
+                </tr>
+              </thead>
+              <tbody>
+              {% for professeur in professeurs %}
+                <tr>
+                  <td>{{professeur.nom_prof}}</td>
+                  <td>{{professeur.prenom_prof}}</td>
+                  <td>{{professeur.email}}</td>
+                </tr>
+               {% endfor %}
+              </tbody>
+            </table>
+            <a href="{{ url_for('professeurs.list_professeurs')}}">
+              <center><button type="button" class="btn btn-info btn-sm">PLUS</button></center>
+            </a>
         </div>
       </div>
+
     </div>
   </div>
 
