--- a/app/templates/administrateur/AccueilSuperAdm.html
+++ b/app/templates/administrateur/AccueilSuperAdm.html
@@ -88,62 +88,73 @@
 
   <div class="row">
 
-    <!-- Area Chart -->
-    <div class="col-xl-8 col-lg-7">
+    <div class="col-lg-6">
+
+      <!-- Dropdown Card Example -->
       <div class="card shadow mb-4">
         <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-          <h6 class="m-0 font-weight-bold text-primary">Liste des administrateurs</h6>
-          <div class="dropdown no-arrow">
-            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-              <div class="dropdown-header">Dropdown Header:</div>
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
+          <h6 class="m-0 font-weight-bold text-primary">GESTION DES DEPARTEMENTS</h6>
         </div>
         <!-- Card Body -->
         <div class="card-body">
-          <div class="chart-area">
-            <canvas id="myAreaChart"></canvas>
-          </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Label departement</th>
+                  <th>Description</th>
+                </tr>
+              </thead>
+              <tbody>
+              {% for departement in departements %}
+                <tr>
+                    <td>{{ departement.label_departement }}</td>
+                    <td>{{ departement.description }} </td>
+                </tr>
+               {% endfor %}
+              </tbody>
+            </table>
+            <a href="{{ url_for('departement.list_departements') }}">
+              <center><button type="button" class="btn btn-info btn-sm">PLUS</button></center>
+            </a>
         </div>
       </div>
     </div>
 
-    <!-- Pie Chart -->
-    <div class="col-xl-4 col-lg-5">
+    <div class="col-lg-6">
+
+      <!-- Dropdown Card Example -->
       <div class="card shadow mb-4">
         <!-- Card Header - Dropdown -->
         <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-          <h6 class="m-0 font-weight-bold text-primary">Liste des départements</h6>
-          <div class="dropdown no-arrow">
-            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in" aria-labelledby="dropdownMenuLink">
-              <div class="dropdown-header">Dropdown Header:</div>
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </div>
+          <h6 class="m-0 font-weight-bold text-primary">GESTION DES ADMINISTRATEURS</h6>
         </div>
         <!-- Card Body -->
         <div class="card-body">
-          <div class="chart-pie pt-4 pb-2">
-            <canvas id="myPieChart"></canvas>
-          </div>
-          <div class="mt-4 text-center small">
-          </div>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Nom</th>
+                  <th scope="col">Prénom</th>
+                  <th scope="col">Email</th>
+                </tr>
+              </thead>
+              <tbody>
+              {% for administrateur in administrateurs %}
+                <tr>
+                  <td>{{administrateur.nom_admin}}</td>
+                  <td>{{administrateur.prenom_admin}}</td>
+                  <td>{{administrateur.email}}</td>
+                </tr>
+               {% endfor %}
+              </tbody>
+            </table>
+            <a href="{{ url_for('administrateurs.list_administrateurs') }}">
+              <center><button type="button" class="btn btn-info btn-sm">PLUS</button></center>
+            </a>
         </div>
       </div>
+
     </div>
   </div>
 
