--- a/app/templates/administrateur/administrateurs/administrateur.html
+++ b/app/templates/administrateur/administrateurs/administrateur.html
@@ -1,30 +1,28 @@
-<!-- app/templates/admininistrateur/administrateurs/administrateur.html -->
-
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block title %}
     {% if add_administrateurs %}
-        Add Administrateurs
+        Add Administrateur
     {% else %}
-        Edit Administrateurs
+        Edit Administrateur
     {% endif %}
 {% endblock %}
 {% block body %}
-<div class="content-section">
- <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <div class="center">
-            {% if add_administrateurs %}
-                <h1>Add Administrateurs</h1>
-            {% else %}
-                <h1>Edit Administrateurs</h1>
-            {% endif %}
-            <br/>
-            {{ wtf.quick_form(form) }}
+        <div class="container-fluid">
+            <div class="card shadow mb-4">
+                <div class="card-header py-3">
+
+                    {% if add_administrateurs %}
+                        <center><h1 class="h3 mb-2 text-gray-800">ADD ADMINISTRATEUR</h1></center>
+                    {% else %}
+                        <center><h1 class="h3 mb-2 text-gray-800">EDIT ADMINISTRATEUR</h1></center>
+                    {% endif %}
+                </div>
+                <div class="card-body">
+                    <div class="center">
+                     {{ wtf.quick_form(form) }}
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
 {% endblock %}
