--- a/app/templates/administrateur/formations/AccueilFormation.html
+++ b/app/templates/administrateur/formations/AccueilFormation.html
@@ -1,29 +1,175 @@
-{% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
-{% block title %}Formations{% endblock %}
+{% block title %}Dashboard{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <br/>
-        {{ utils.flashed_messages() }}
-        <br/>
-        <h1 style="text-align:center;">Formation : {{ formations.label_formation }}</h1>
-          <hr class="intro-divider">
-          <div class="center">
-              <p>vous êtes dans la page du formation :  <span> {{formations.label_formation}} </span><br>
-              Vous pouvez gérer les etudiants, les matiéres ainsi les annonces de cette formation : </p><br>
-              <a href="{{ url_for('etudiants.list_etudiants', id=formations.id) }}">Etudiants</a><br>
-              <a href="{{ url_for('matieres.list_matieres', id=formations.id) }}">Matières</a><br>
-              <a href="{{ url_for('annonces.list_annonces', id=formations.id) }}">Annonces</a><br>
+  <!-- Page Heading -->
+  <div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">DASHBOARD DE LA FORMATION : {{ formations.label_formation }}</h1>
+    <a href="{{ url_for('annonces.list_annonces', id=formations.id) }}">
+      <button type="button" class="btn btn-outline-info btn-lg">AJOUTER UNE ANNONCE</button>
+    </a>
+  </div>
 
+  <!-- Content Row -->
+  <div class="row">
+
+    <!-- Earnings (Monthly) Card Example -->
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-primary shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col mr-2">
+              <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Département de la formation</div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">{{current_user.departement}}</div>
+            </div>
+            <div class="col-auto">
+              <i class="fas fa-calendar fa-2x text-gray-300"></i>
+            </div>
           </div>
-          <div style="text-align: center">
+        </div>
+      </div>
+    </div>
+
+    <!-- Earnings (Monthly) Card Example -->
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-success shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col mr-2">
+              <div class="text-xs font-weight-bold text-success text-uppercase mb-1"> Nombre des étudiants dans la formation </div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">
+                  <a href="{{ url_for('etudiants.list_etudiants', id=formations.id) }}">
+                      {{nb_etudiant}} Etudiants</a></div>
+            </div>
+            <div class="col-auto">
+              <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Earnings (Monthly) Card Example -->
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-info shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col mr-2">
+              <div class="text-xs font-weight-bold text-info text-uppercase">Nombre des matière dans la formation</div>
+              <div class="row no-gutters align-items-center">
+                <div class="col-auto">
+                  <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
+                      <a href="{{ url_for('matieres.list_matieres', id=formations.id) }}">
+                          {{nb_matiere}} Matières</a></div>
+                </div>
+                <div class="col">
+                </div>
+              </div>
+            </div>
+            <div class="col-auto">
+              <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Pending Requests Card Example -->
+    <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-warning shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col mr-2">
+              <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">Ajouter une nouvelle annonce</div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">
+                  <a href="{{ url_for('annonces.list_annonces', id=formations.id) }}">
+                      {{nb_annonce}} Annonces</a></div>
+            </div>
+            <div class="col-auto">
+              <i class="fas fa-comments fa-2x text-gray-300"></i>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+
+  <!-- Content Row -->
+
+  <div class="row">
+
+    <div class="col-lg-6">
+
+      <!-- Dropdown Card Example -->
+      <div class="card shadow mb-4">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+          <h6 class="m-0 font-weight-bold text-primary">GESTION DES ETUDIANTS</h6>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Nom</th>
+                  <th scope="col">Prénom</th>
+                  <th scope="col">Email</th>
+                </tr>
+              </thead>
+              <tbody>
+              {% for etudiant in etudiants %}
+                <tr>
+                  <td>{{etudiant.nom_etud}}</td>
+                  <td>{{etudiant.prenom_etud}}</td>
+                  <td>{{etudiant.email}}</td>
+                </tr>
+               {% endfor %}
+              </tbody>
+            </table>
+            <a href="{{ url_for('etudiants.list_etudiants', id=formations.id) }}">
+              <center><button type="button" class="btn btn-info btn-sm">PLUS</button></center>
+            </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-6">
+
+      <!-- Dropdown Card Example -->
+      <div class="card shadow mb-4">
+        <!-- Card Header - Dropdown -->
+        <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+          <h6 class="m-0 font-weight-bold text-primary">GESTION DES MATIERES</h6>
+        </div>
+        <!-- Card Body -->
+        <div class="card-body">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th scope="col">Lebel Matière</th>
+                  <th scope="col">Description</th>
+                </tr>
+              </thead>
+              <tbody>
+              {% for matiere in matieres %}
+                <tr>
+                  <td>{{matiere.label_matiere}}</td>
+                  <td>{{matiere.description}}</td>
+                </tr>
+               {% endfor %}
+              </tbody>
+            </table>
+            <a href="{{ url_for('matieres.list_matieres', id=formations.id) }}">
+              <center><button type="button" class="btn btn-info btn-sm">PLUS</button></center>
+            </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+  <!-- Content Row -->
+  <div class="row">
+
+    <!-- Content Column -->
+
   </div>
 {% endblock %}
