--- a/app/templates/administrateur/formations/formation.html
+++ b/app/templates/administrateur/formations/formation.html
@@ -8,21 +8,21 @@
     {% endif %}
 {% endblock %}
 {% block body %}
-<div class="content-section">
- <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <div class="center">
-            {% if add_formations %}
-                <h1>Add Formations</h1>
-            {% else %}
-                <h1>Edit Formations</h1>
-            {% endif %}
-            <br/>
-            {{ wtf.quick_form(form) }}
+        <div class="container-fluid">
+            <div class="card shadow mb-4">
+                <div class="card-header py-3">
+
+                    {% if add_formations %}
+                        <center><h1 class="h3 mb-2 text-gray-800">ADD FORMATION</h1></center>
+                    {% else %}
+                        <center><h1 class="h3 mb-2 text-gray-800">EDIT FORMATION</h1></center>
+                    {% endif %}
+                </div>
+                <div class="card-body">
+                    <div class="center">
+                     {{ wtf.quick_form(form) }}
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
 {% endblock %}
