--- a/app/templates/administrateur/matiere/matiere.html
+++ b/app/templates/administrateur/matiere/matiere.html
@@ -2,27 +2,27 @@
 {% extends "base.html" %}
 {% block title %}
     {% if add_matieres %}
-        Add Matiers
+        Add Matiere
     {% else %}
-        Edit Matiers
+        Edit Matiere
     {% endif %}
 {% endblock %}
 {% block body %}
-<div class="content-section">
- <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <div class="center">
-            {% if add_Matiers %}
-                <h1>Add Matiers</h1>
-            {% else %}
-                <h1>Edit Matiers</h1>
-            {% endif %}
-            <br/>
-            {{ wtf.quick_form(form) }}
+        <div class="container-fluid">
+            <div class="card shadow mb-4">
+                <div class="card-header py-3">
+
+                    {% if add_matieres %}
+                        <center><h1 class="h3 mb-2 text-gray-800">ADD MATIERE</h1></center>
+                    {% else %}
+                        <center><h1 class="h3 mb-2 text-gray-800">EDIT MATIERE</h1></center>
+                    {% endif %}
+                </div>
+                <div class="card-body">
+                    <div class="center">
+                     {{ wtf.quick_form(form) }}
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </div>
-</div>
 {% endblock %}
