--- a/app/templates/administrateur/profile/profile.html
+++ b/app/templates/administrateur/profile/profile.html
@@ -2,119 +2,126 @@
 {% extends "base.html" %}
 {% block title %}Profile{% endblock %}
 {% block body %}
-<div class="container emp-profile">
-    <br/>
-        {{ utils.flashed_messages() }}
-    <br/>
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
 
-    {% for admin in administrateur %}
-            <form method="post">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="profile-img">
-                            <img src="{{url_for('static', filename='img/profil.jpg')}}" />
-                            <div class="file btn btn-lg btn-primary">
-                                Change Photo
-                                <input type="file" name="file"/>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="profile-head">
-                                    <h5>
-                                        {{admin.nom_admin}} {{admin.prenom_admin}}
-                                    </h5>
-                                    <h6>
-                                        {% if current_user.is_superadmin %}
-                                            Fonction :  Administrateur à l'Université Paris 8
-                                        {% else %}
-                                            Fonction : Administrateur {{ admin.departement }}
-                                        {% endif %}
-                                    </h6>
-                            <ul class="nav nav-tabs" id="myTab" role="tablist">
-                                <li class="nav-item">
-                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="" role="tab" aria-controls="home" aria-selected="true">Informations</a>
-                                </li>
-                            </ul>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="tab-content profile-tab" id="myTabContent">
-                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Nom</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{admin.nom_admin}}</p>
+          <!-- Page Heading -->
+          <h1 class="h3 mb-2 text-gray-800">VOTRE PROFILE</h1>
+          <!-- DataTales Example -->
+        {% for admin in administrateur %}
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+               <div align="right">
+               <a href="{{ url_for('administrateur.edit_profile', id=admin.id) }}">
+                  <button type="button" class="btn btn-info btn-lg">EDIT PROFILE</button>
+               </a>
+             </div>
+            </div>
+            <div class="card-body">
+                        {{ utils.flashed_messages() }}
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="profile-img">
+                                            <img src="{{url_for('static', filename='img/profil.jpg')}}" />
+                                            <div class="file btn btn-lg btn-primary">
+                                                Change Photo
+                                                <input type="file" name="file"/>
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Prénom</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{admin.prenom_admin}}</p>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="profile-head">
+                                                    <h5>
+                                                        {{admin.nom_admin}} {{admin.prenom_admin}}
+                                                    </h5>
+                                                    <h6>
+                                                        {% if current_user.is_superadmin %}
+                                                            Fonction :  Administrateur à l'Université Paris 8
+                                                        {% else %}
+                                                            Fonction : Administrateur {{ admin.departement }}
+                                                        {% endif %}
+                                                    </h6>
+                                            <ul class="nav nav-tabs" id="myTab" role="tablist">
+                                                <li class="nav-item">
+                                                    <a class="nav-link active" id="home-tab" data-toggle="tab" href="" role="tab" aria-controls="home" aria-selected="true">Informations</a>
+                                                </li>
+                                            </ul>
+                                    </div>
+                                    <div class="col-md-8">
+                                        <div class="tab-content profile-tab" id="myTabContent">
+                                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                                        <div class="row">
+                                                            <div class="col-md-6">
+                                                                <label>Nom</label>
+                                                            </div>
+                                                            <div class="col-md-6">
+                                                                <p>{{admin.nom_admin}}</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-md-6">
+                                                                <label>Prénom</label>
+                                                            </div>
+                                                            <div class="col-md-6">
+                                                                <p>{{admin.prenom_admin}}</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-md-6">
+                                                                <label>Date de naissance</label>
+                                                            </div>
+                                                            <div class="col-md-6">
+                                                                <p>{{admin.date_naissance}}</p>
+                                                            </div>
+                                                        </div>
+                                                         <div class="row">
+                                                            <div class="col-md-6">
+                                                                <label>Email</label>
+                                                            </div>
+                                                            <div class="col-md-6">
+                                                                <p>{{admin.email}}</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="row">
+                                                            <div class="col-md-6">
+                                                                <label>Adresse</label>
+                                                            </div>
+                                                            <div class="col-md-6">
+                                                                <p>{{admin.adresse}} {{admin.code_postal}}
+                                                                {{admin.ville}} {{admin.pays}}</p>
+                                                            </div>
+                                                        </div>
+                                                         {% if not current_user.is_superadmin %}
+                                                        <div class="row">
+                                                            <div class="col-md-6">
+                                                                <label>UFR</label>
+                                                            </div>
+                                                            <div class="col-md-6">
+                                                                <p>{{admin.departement}}</p>
+                                                            </div>
+                                                        </div>
+                                                        {% else %}
+                                                        <div class="row">
+                                                            <div class="col-md-6">
+                                                                <label>Fonction</label>
+                                                            </div>
+                                                            <div class="col-md-6">
+                                                                <p>Administrateur à l'Université Paris 8</p>
+                                                            </div>
+                                                        </div>
+                                                          {%endif%}
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Date de naissance</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{admin.date_naissance}}</p>
-                                            </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <div class="profile-work">
                                         </div>
-                                         <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Email</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{admin.email}}</p>
-                                            </div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Adresse</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{admin.adresse}} {{admin.code_postal}}
-                                                {{admin.ville}} {{admin.pays}}</p>
-                                            </div>
-                                        </div>
-                                         {% if not current_user.is_superadmin %}
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>UFR</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>{{admin.departement}}</p>
-                                            </div>
-                                        </div>
-                                        {% else %}
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Fonction</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p>Administrateur à l'Université Paris 8</p>
-                                            </div>
-                                        </div>
-                                          {%endif%}
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                    <a href="{{ url_for('administrateur.edit_profile', id=admin.id) }}"   class="col-md-2">
-                         <input class="btn btn-info" name="btnAddMore" value="Edit Profile"/></a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="profile-work">
-                        </div>
-                    </div>
-                </div>
-            </form>
-    {%endfor%}
-</div>
+                                    </div>
+                                </div>
+                    {%endfor%}
+            </div>
+          </div>
+        </div>
 {% endblock %}
