--- a/app/templates/administrateur/profile/profile.html
+++ b/app/templates/administrateur/profile/profile.html
@@ -31,9 +31,9 @@
                                     </div>
                                     <div class="col-md-6">
                                         <div class="profile-head">
-                                                    <h5>
+                                                    <h2 class="m-0 font-weight-bold text-primary">
                                                         {{admin.nom_admin}} {{admin.prenom_admin}}
-                                                    </h5>
+                                                    </h2>
                                                     <h6>
                                                         {% if current_user.is_superadmin %}
                                                             Fonction :  Administrateur à l'Université Paris 8
