Ajout de la gestion de l'espace etudiant

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -94,6 +94,13 @@
                       <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('etudiant.profil') }}">Profile</a>
                   </li>
+
+
+                  </li>
+                      <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('etudiant.list_matieres') }}">Matières</a>
+                  </li>
+
                   <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('etudiant.logoutEtud') }}">Logout</a>
                   </li>
