--- a/app/templates/etudiant/AccueilEtud.html
+++ b/app/templates/etudiant/AccueilEtud.html
@@ -3,6 +3,50 @@
 {% block body %}
   <!-- Page Heading -->
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+    <h1 class="h3 mb-0 text-gray-800">Table de bord</h1>
   </div>
+<div class="row">
+     <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-success shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col mr-2">
+              <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                  {{current_user.formation.label_formation}}
+              </div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">
+                    <a href="{{ url_for('etudiant.list_matieres') }}">
+                        {{nb_matieres}} Matières
+                    </a>
+              </div>
+            </div>
+            <div class="col-auto">
+              <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+     <div class="col-xl-3 col-md-6 mb-4">
+      <div class="card border-left-success shadow h-100 py-2">
+        <div class="card-body">
+          <div class="row no-gutters align-items-center">
+            <div class="col mr-2">
+              <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                  {{current_user.formation.label_formation}}
+              </div>
+              <div class="h5 mb-0 font-weight-bold text-gray-800">
+                    <a href="{{ url_for('etudiant.list_annonces') }}">
+                        {{nb_annonces}} Annonces
+                    </a>
+              </div>
+            </div>
+            <div class="col-auto">
+              <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+     </div>
 {% endblock %}
