--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,6 +21,7 @@
         <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <script src="https://use.fontawesome.com/f4bbca2ac7.js"></script>
 
     <script src="{{ url_for('static', filename='js/datatables-demo.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery-min.js') }}"></script>
@@ -109,6 +110,9 @@
 
                     <li class="nav-item active">
                     <a class="nav-link" href="{{ url_for('professeur.AcceuilProfesseur') }}">Home<span class="sr-only">(current)</span></a>
+                  </li>
+                   <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('profmatieres.list_matieres') }}">Matières</a>
                   </li>
                   </li>
                       <li class="nav-item">
